--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ i {
   line-height: 120%;
 }
 
+.page {
+  padding: 60px 150px 50px;
+}
+
 .container {
   max-width: 1140px;
   padding: 0 30px;
