--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
 @import url("css/normalize.css");
 @import url("css/style.css");
 @import url("css/header.css");
+@import url("css/rule-one.css");
+@import url("css/rule-two.css");
