section resume done

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url("css/normalize.css");
 @import url("css/style.css");
-@import url("css/header.css");
+@import url("css/nav.css");
 @import url("css/rule-one.css");
 @import url("css/rule-two.css");
+@import url("css/resume.css");
