--- a/css/nav.css
+++ b/css/nav.css
@@ -1,9 +1,13 @@
-.content {
-  padding: 25px 0 25px;
+.container-nav {
+  max-width: 1140px;
+  padding: 0 0 25px 0;
+  margin: 0 auto;
+  border-radius: 10px;
+  background: #F1F1F1;
 }
 
 .content__navigation {
-  margin-left: 15px;
+  margin-left: 45px;
 }
 
 .content__navigation__item {
@@ -26,7 +30,7 @@
 
 .content__title {
   padding-top: 25px;
-  margin-left: 15px;
+  margin-left: 45px;
   margin-bottom: 20px;
 }
 
