--- a/index.css
+++ b/index.css
@@ -4,3 +4,4 @@
 @import url("css/rule-one.css");
 @import url("css/rule-two.css");
 @import url("css/resume.css");
+@import url("css/rule-three.css");
