--- a/css/rule-three.css
+++ b/css/rule-three.css
@@ -1,3 +1,12 @@
+.rule-three {
+  padding-bottom: 25px;
+  padding-top: 25px;
+}
+
 .rule-three__img {
   margin: 0 auto 30px;
+}
+
+.rule-three__img-nomargin, .rule-three__img-last {
+  margin: 0 auto 0;
 }
