--- a/css/nav.css
+++ b/css/nav.css
@@ -1,9 +1,25 @@
 .container-nav {
   max-width: 1140px;
-  padding: 0 0 25px 0;
   margin: 0 auto;
   border-radius: 10px;
   background: #F1F1F1;
+  padding-bottom: 25px;
+}
+
+.container-nav:last-child {
+  max-width: 1140px;
+  margin: 0 auto;
+  border-radius: 10px;
+  background: #F1F1F1;
+  padding-bottom: 25px;
+}
+
+.header {
+  padding-bottom: 50px;
+}
+
+.content {
+  padding: 25px 0 0;
 }
 
 .content__navigation {
@@ -29,14 +45,10 @@
 }
 
 .content__title {
-  padding-top: 25px;
   margin-left: 45px;
   margin-bottom: 20px;
 }
 
-.header {
-  padding-bottom: 25px;
-}
 
 .header__title {
   margin-bottom: 30px;
