--- a/css/resume.css
+++ b/css/resume.css
@@ -1,13 +1,19 @@
+.resume {
+  padding: 25px 0 0;
+}
+
+.resume__title {
+  margin-left: 45px;
+  margin-bottom: 20px;
+  padding-top: 25px;
+}
+
 .content__resume {
   margin-left: 45px;
 }
 
-.content__resume__item {
+.content__resume__item:not(:last-child) {
   margin-bottom: 10px;
-}
-
-.content__resume__item:last-child {
-  margin-bottom: 25px;
 }
 
 .content__resume__list {
