--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url("css/normalize.css");
 @import url("css/style.css");
 @import url("css/nav.css");
-@import url("css/rule-one.css");
-@import url("css/rule-two.css");
+@import url("css/cats.css");
+@import url("css/dom.css");
+@import url("css/receipt.css");
 @import url("css/resume.css");
-@import url("css/rule-three.css");
