--- a/css/dom.css
+++ b/css/dom.css
@@ -1,10 +1,10 @@
-.rule-two {
+.dom {
   padding-bottom: 25px;
   padding-top: 25px;
   
 }
 
-.rule-two__title {
+.dom__title {
   margin-bottom: 30px;
 }
 
@@ -14,37 +14,37 @@
   margin: 0 auto 15px;
 }
 
-.rule-two__figure {
+.dom__figure {
   border: 1px solid #000;
   background: #FFF;
   margin-bottom: 30px;
 }
 
-.rule-two__block-img1 {
+.dom__block-img1 {
   height: 1017px;
   margin-bottom: 30px;
 }
 
-.rule-two__img-dom1 {
+.dom__img-dom1 {
   position: relative;
   margin-bottom: 30px;
 }
 
-.rule-two__img-dom2 {
+.dom__img-dom2 {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
 }
 
-.rule-two__img-dom3 {
+.dom__img-dom3 {
   margin-bottom: 15px;
 }
 
-.rule-two__img-dom4 {
+.dom__img-dom4 {
   margin: 0 auto 30px;
 }
 
-.rule-two__img-dom5 {
+.dom__img-dom5 {
   margin-bottom: 30px;
 }
 
